zeit.content.cp changes
=======================

0.22 (unreleased)
-----------------

- Nothing changed yet.


0.21 (2009-09-10)
-----------------

- Eine CP erzeugt beim Einchecken einen »Lead-Channel«. Dieser wird für
  Autopiloten verwendet.


0.20.6 (2009-09-06)
-------------------

- Regel-Glob ``cp_type``


0.20.5 (2009-09-05)
-------------------

- Beinhaltete, nicht semantisch geänderte, Objekte werden auch nicht mehr mit
  veröffentlicht, weil es nicht performant genug ist.


0.20.4 (2009-09-05)
-------------------

- Freie Teaser werden nicht mehr veröffentlicht, weil das garnicht nötig. ist.


0.20.3 (2009-09-05)
-------------------

- Tests für Änderungen an zeit.cms angepasst.


0.20.2 (2009-09-05)
-------------------

- Ändern des Autopilots aktualisierte den xi:include nicht.


0.20.1 (2009-09-05)
-------------------

- Refresh auf einem RSS-Block ohne URL führt nicht mehr zu einem Fehler.


0.20 (2009-09-05)
-----------------

- Asynchrones aktualisieren der Metadaten der CP beim Checkin.

- Aktualisieren der Metadaten funktioniert auch, wenn ein Autopilot
  ein ungültiges Objekt referenziert.

- Beim Aufmachen des Editors wird zunächst ein Busy-Indicator gezeigt.


0.19 (2009-09-04)
-----------------

- Rule-Globs ``content`` und ``is_published`` (#6059).

- Korrekte Anzeige der Teaser und Spitzmarke im Editor (Teil von #5877).

- Teaser-Bearbeiten-Box ist wieder als Box erkennbar, die man auch zumachen
  kann.

0.18.2 (2009-09-04)
-------------------

- Feed-Updates repariert, wenn der Feed kein Feed sondern z.B. eine HTML-Seite
  ist.


0.18.1 (2009-09-04)
-------------------

- Feed-Updates repariert, wenn Feed noch nie aktualisiert wurde.


0.18 (2009-09-04)
-----------------

- Player (vid/pls) für Video (#6150).

- Principal mit dem die Feeds veröffentlicht werden ist jetzt konfigurierbar.

- Beim Umsortieren von Teasern kann man jetzt direkt das Objekt in einem neuen
  Fenster bearbeiten (#5820).
